# solace-clustering

./: 1_extract_questions.py  2_cluster_questions.py  3_cluster_performance.py  cluster_performance.csv  main.py  math_cluster_keywords.csv  math_questions.csv  math_questions.json  math_questions_with_clusters.csv  pyproject.toml  questions.json  questions_with_clusters.csv  reading_cluster_keywords.csv  reading_questions.csv  reading_questions.json  reading_questions_with_clusters.csv  science_cluster_keywords.csv  science_questions.csv  science_questions.json  science_questions_with_clusters.csv
js_files/: math-algebra1-practice-2023.js  math-algebra2-2014.js  math-algebra2-practice-2023.js  math-geometry-practice-2023.js  math-grade3-2014.js  math-grade5-practice-2023.js  math-grade6-2014.js  math-grade6-practice-2023.js  math-grade7-2014.js
js_math/: math-algebra1-2014.js  math-algebra1-2015.js  math-algebra2-2015.js  math-geometry-2014.js  math-geometry-2015.js  math-grade3-practice-2023.js  math-grade4-2014.js  math-grade4-practice-2023.js  math-grade5-2014.js  math-grade7-practice-2023.js  math-grade8-2014.js  math-grade8-practice-2023.js
js_reading/: reading-endofcourse-2015.js  reading-endofcourse-practice-2024.js  reading-grade3-2015.js  reading-grade3-practice-2024.js  reading-grade4-2015.js  reading-grade4-practice-2024.js  reading-grade5-2015.js  reading-grade5-practice-2024.js  reading-grade6-2015.js  reading-grade6-practice-2024.js  reading-grade7-2015.js  reading-grade7-practice-2024.js  reading-grade8-2015.js  reading-grade8-practice-2024.js
(+5 files in other folders)
